--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bs-storybook",
-  "version": "0.3.0",
+  "name": "bs-storybook-native",
+  "version": "0.2.0",
   "description": "BuckleScript bindings for Storybook.js",
   "scripts": {
     "build": "bsb -make-world",
@@ -21,7 +21,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "^4.0.4"
+    "bs-platform": "^4.0.5"
   },
   "dependencies": {
     "reason-react": "^0.5.3"
@@ -30,6 +30,7 @@
     "@storybook/addon-actions": "^3.2.17",
     "@storybook/addon-knobs": "^3.3.3",
     "@storybook/addons": "^3.3.14",
-    "@storybook/react": "^3.2.17"
+    "@storybook/react": "^3.2.17",
+    "@storybook/react-native": "^3.2.17"
   }
 }
