--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bs-storybook-native",
-  "version": "0.2.0",
+  "version": "0.4.0",
   "description": "BuckleScript bindings for Storybook.js",
   "scripts": {
     "build": "bsb -make-world",
@@ -27,10 +27,9 @@
     "reason-react": "^0.5.3"
   },
   "peerDependencies": {
-    "@storybook/addon-actions": "^3.2.17",
-    "@storybook/addon-knobs": "^3.3.3",
-    "@storybook/addons": "^3.3.14",
-    "@storybook/react": "^3.2.17",
-    "@storybook/react-native": "^3.2.17"
+    "@storybook/addon-actions": "^4.0.2",
+    "@storybook/addon-links": "^4.0.2",
+    "@storybook/addons": "^4.0.2",
+    "@storybook/react-native": "^4.0.2"
   }
 }
